# obsolete-spl-zk-token

./: .gitignore  Cargo.toml  README.md  setup.sh
.github/workflows/: test.yml
ci/: cargo-build-test.sh  install-program-deps.sh  rust-version.sh  solana-version.sh
crypto/: Cargo.toml
crypto/src/: lib.rs  pod.rs  pod_curve25519_dalek.rs  transcript.rs  zk_token_proof_instruction.rs
crypto/src/encryption/: dlog.rs  elgamal.rs  encode.rs  pedersen.rs
crypto/src/instruction/: close_account.rs  create_account.rs  deposit.rs  mod.rs  transfer.rs  update_account_pk.rs  withdraw.rs
crypto/src/instructions/: close_account.rs  mod.rs  transfer.rs  update_account_pk.rs  withdraw.rs
crypto/src/range_proof/: generators.rs  inner_product.rs  mod.rs  util.rs
crypto/src/transfer_data/: mod.rs
crypto/src/validity_proof/: mod.rs  net_proof.rs  receiver_ct_proof.rs  sender_ct_proof.rs
demo/: Cargo.toml
demo/src/: main.rs
native-program/: Cargo.toml
native-program/src/: lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  instruction.rs  lib.rs  pod.rs  processor.rs  state.rs
program/tests/: functional.rs  integration.rs
proof-program/: Cargo.toml
scripts/: embed.sh  patch.crates-io.sh  update-solana-dependencies.sh
sdk/: Cargo.toml
sdk/src/encryption/: elgamal.rs
sdk/src/instruction/: transfer.rs
