[package]
name = "spl-confidential-token"
description = "Solana Program Library Confidential Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
solana-program = "=1.7.8"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"
solana-validator = "=1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
