[package]
name = "spl-zk-token-crypto"
version = "0.1.0"
repository = "https://github.com/solana-labs/solana-program-library"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
bincode = "1"
bytemuck = "1.7.2"
bytemuck_derive = "1.0.1"
borsh = "0.9"
borsh-derive = "0.9.0"
byteorder = { version = "1", default-features = false }
clear_on_drop = { version = "0.2", default-features = false }
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "alloc", "serde"] }
digest = { version = "0.8", default-features = false }
getrandom = { version = "0.1", features = ["dummy"] }
itertools = "0.8"
merlin = { version = "2", default-features = false }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
thiserror = "1"
zeroable = "0.2.0"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
time = "0.1.40"
