[package]
name = "spl-zk-token-crypto"
description = "Solana Program Library ZkToken Crypto"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
arrayref = "0.3.6"
bincode = "1"
bytemuck = { version = "1.7.2", features = ["derive"] }
byteorder = { version = "1", default-features = false }
clear_on_drop = { version = "0.2", default-features = false }
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "alloc", "serde"] }
digest = { version = "0.8", default-features = false }
getrandom = { version = "0.1", features = ["dummy"] }
itertools = "0.8"
merlin = { version = "2", default-features = false }
num-derive = "0.3"
num-traits = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
solana-program = "=1.7.11"
subtle = { version = "2", default-features = false }
thiserror = "1"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
time = "0.1.40"
