[package]
name = "zk-token-demo-cli"
description = "Solana Program Library ZkToken Demo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
clap = "2.33.3"
solana-clap-utils = "=1.7.13"
solana-cli-config = "=1.7.13"
solana-client = "=1.7.13"
solana-logger = "=1.7.13"
solana-remote-wallet = "=1.7.13"
solana-sdk = "=1.7.13"
tokio = { version = "1", features = ["full"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-zk-token = { path = "../program", features = ["no-entrypoint"]}
spl-zk-token-crypto = { path = "../crypto"}

[dev-dependencies]
solana-validator = "=1.7.13"
