[package]
name = "zk-token-demo-cli"
description = "Solana Program Library ZkToken Demo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
clap = "2.33.3"
solana-clap-utils = "=1.9.1"
solana-cli-config = "=1.9.1"
solana-client = "=1.9.1"
solana-logger = "=1.9.1"
solana-remote-wallet = "=1.9.1"
solana-sdk = "=1.9.1"
tokio = { version = "1", features = ["full"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-zk-token = { path = "../program", features = ["no-entrypoint"]}
spl-zk-token-sdk = { path = "../sdk"}

[dev-dependencies]
solana-test-validator = "=1.9.1"
