[package]
name = "zk-token-demo-cli"
description = "Solana Program Library ZkToken Demo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
clap = "2.33.3"
solana-clap-utils = "=1.10.0"
solana-cli-config = "=1.10.0"
solana-client = "=1.10.0"
solana-logger = "=1.10.0"
solana-remote-wallet = "=1.10.0"
solana-sdk = "=1.10.0"
solana-zk-token-sdk = "=1.10.0"
tokio = { version = "1", features = ["full"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-zk-token = { path = "../program", features = ["no-entrypoint"]}

[dev-dependencies]
solana-test-validator = "=1.10.0"
