[package]
name = "spl-zk-token"
description = "Solana Program Library ZkToken Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
getrandom = { version = "0.1", features = ["dummy"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.7.11"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-memo = { version = "3", features = ["no-entrypoint"] }
spl-zk-token-crypto = { path = "../crypto" }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"
spl-zk-token-proof= { path = "../proof-program" }
bincode = "1.3.1"

[lib]
crate-type = ["cdylib", "lib"]
