[package]
name = "spl-zk-token"
description = "Solana Program Library ZkToken Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
getrandom = { version = "0.1", features = ["dummy"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.7.15"
spl-memo = { version = "3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-zk-token-sdk = { path = "../sdk" }

[dev-dependencies]
assert_matches = "1.4.0"
bincode = "1.3.1"
solana-program-test = "=1.7.15"
solana-sdk = "=1.7.15"
solana-validator = "=1.7.15"
spl-zk-token-proof-program = { path = "../proof-program" }

[lib]
crate-type = ["cdylib", "lib"]
