[package]
name = "spl-zk-token"
description = "Solana Program Library ZkToken Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []
test-bpf = []
twoxtx = [] # Enable tests that require 2x transaction size

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
getrandom = { version = "0.1", features = ["dummy"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.10.0"
spl-memo = { version = "3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-zk-token-sdk = "=1.10.0"

[dev-dependencies]
assert_matches = "1.4.0"
bincode = "1.3.1"
solana-program-test = "=1.10.0"
solana-sdk = "=1.10.0"
solana-validator = "=1.10.0"

[lib]
crate-type = ["cdylib", "lib"]
